// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onPostBuild should generate \`robots.txt\` using \`env\` options 1`] = `
"User-agent: *
Disallow: /
Sitemap: https://www.test.com/sitemap.xml
Host: https://www.test.com
"
`;

exports[`onPostBuild should generate \`robots.txt\` using \`env\` options and \`resolveEnv\` function 1`] = `
"User-agent: *
Disallow: /
Sitemap: https://www.test.com/sitemap.xml
Host: https://www.test.com
"
`;

exports[`onPostBuild should generate \`robots.txt\` using \`graphql\` options 1`] = `
"User-agent: *
Allow: /
Sitemap: https://www.test.com/sitemap/sitemap-index.xml
Host: https://www.test.com
"
`;

exports[`onPostBuild should generate \`robots.txt\` using options 1`] = `
"User-agent: *
Allow: /
Sitemap: https://www.test.com/sitemap.xml
Host: https://www.test.com
"
`;

exports[`onPostBuild should generate a \`robots.txt\` without a host property 1`] = `
"User-agent: *
Allow: /
Sitemap: https://www.test.com/sitemap.xml
"
`;

exports[`onPostBuild should generate a \`robots.txt\` without a sitemap property 1`] = `
"User-agent: *
Allow: /
Host: https://www.test.com
"
`;
